--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,9 @@
     --color-primary: #E31E24;
     --color-secondary: #FFB81C;
     --color-dark: #1a1a1a;
-    --color-dark-light: #2d2d2d;
+    --color-light: #f5f5f5;
     --color-white: #ffffff;
-    --color-gray: #cccccc;
-    --color-gray-dark: #666666;
+    --color-green: #2d5016;
 
     /* === FONTES === */
     --font-family: 'Poppins', sans-serif;
